# odoo-ls-mcp

./: .gitignore  .mcp.json  AGENTS.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
.sisyphus/evidence/: task-4-diagnostics-cache.txt  task-4-document-sync.txt  task-5-core-navigation-error.txt  task-5-core-navigation.txt  task-6-health-status.txt  task-6-odoo-helpers.txt
docs/: opencode-integration.md
src/odoo_ls_mcp/: config.py  diagnostics_cache.py  lsp_client.py  lsp_session.py  models.py  parse_tool.py  server.py  session.py  sync.py  utils.py
tests/: test_config.py  test_e2e.py  test_integration.py  test_lifecycle_hardening.py  test_lsp_session.py  test_navigation_tools.py  test_odoo_helpers.py  test_parse_tool.py  test_session.py  test_sync.py
