[project]
name = "odoo-ls-mcp"
version = "0.1.0"
description = "MCP server bridging OdooLS (Odoo Language Server) to LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
]

[project.scripts]
odoo-ls-mcp = "odoo_ls_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odoo_ls_mcp"]

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests that require no external processes",
    "integration: tests that require odoo_ls_server binary on PATH",
    "e2e: end-to-end tests that spawn a real MCP server subprocess (slow)",
]
testpaths = ["tests"]

[tool.ruff.lint.isort]
known-first-party = ["odoo_ls_mcp"]
